--- a/django-postgres-docker/docker-compose.yml
+++ b/django-postgres-docker/docker-compose.yml
@@ -6,14 +6,14 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "8080:8080"
     volumes:
       - .:/app
     environment:
       - DJANGO_SETTINGS_MODULE=app.settings
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password # Change this to a secure password
+      - POSTGRES_PASSWORD=password
     depends_on:
       - db
     networks:
@@ -21,14 +21,12 @@ services:
 
   db:
     image: postgres:13
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password # Change this to a secure password
+      - POSTGRES_PASSWORD=password
     networks:
       - app-network
 
